--- a/home/index.html
+++ b/home/index.html
@@ -71,7 +71,7 @@
     </figure>
     </div>
 
-    <div id="app">
+    <div id="app3">
         <form v-on:submit.prevent="addItem">
           <p>
             <h4>Order here:</h4>
