--- a/home/index.html
+++ b/home/index.html
@@ -57,7 +57,7 @@
 
 
 
-<div id="app">
+<div id="app3">
   {{ message }} <br>
   {{'Random number: ' + Math.ceil(Math.random()*6) }}
   <div v-bind:class="vueClass">This element is bound to the "pinkBG" class.</div>
@@ -71,7 +71,7 @@
     </figure>
     </div>
 
-    <div id="app">
+    <div id="app3">
         <form v-on:submit.prevent="addItem">
           <p>
             <h4>Order here:</h4>
