--- a/home/index.html
+++ b/home/index.html
@@ -57,7 +57,7 @@
 
 
 
-<div id="app3">
+<div id="app">
   {{ message }} <br>
   {{'Random number: ' + Math.ceil(Math.random()*6) }}
   <div v-bind:class="vueClass">This element is bound to the "pinkBG" class.</div>
@@ -70,7 +70,7 @@
     <figcaption>{{ x.name }}</figcaption>
     </figure>
     </div>
-
+</div>
     <div id="app3">
         <form v-on:submit.prevent="addItem">
           <p>
